--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@main
 
       - name: Run Codacy Analysis CLI
-        uses: codacy/codacy-analisis-cli-action@master
+        uses: codacy/codacy-analysis-cli-action@master
         with:
           api-token: ${{ secrets.CODACY_API_TOKEN }}
           output: results.sarif
@@ -26,5 +26,5 @@ jobs:
       - name: Upload SARIF results file
         uses: github/codeql-action/upload-sarif@main
         with:
-          sarif_file: results.safir
+          sarif_file: results.sarif
   
