--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_1.xsd">
     <name>WebGoat</name>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>WebGoat</groupIdds>
+    <groupId>WebGoatteste</groupIdds>
     <artifactId>WebGoat</artifactId>
     <packaging>war</packaging>
     <version>6.0.1</version>
